--- a/to-do-list/style.css
+++ b/to-do-list/style.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Fira Code;
 }
 .container {
   width: 100%;
