--- a/to-do-list/style.css
+++ b/to-do-list/style.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
-  font-family: Fira Code;
+  font-family: PT Serif;
 }
 .container {
   width: 100%;
